[package]
name = "openai-api-stream-rs"
version = "0.1.0"
authors = ["BillGPT"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A Rust crate that provides a simple function for interacting with the OpenAI API and performing language-based tasks. This crate focuses on streaming responses from the API, enabling real-time processing of large amounts of data."
license = "MIT"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
async-std = "1.10.0"
futures = "0.3"